...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <Button
        android:id="@+id/greedyAlgorithms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_greedy_algorithms"

        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline2"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
...
